three parcentage column positioning example initial commit and end of three fixed column positioning

--- a/three_percentage_column/positioningex07.html
+++ b/three_percentage_column/positioningex07.html
@@ -14,6 +14,11 @@
             border: 0;
         }
 
+        #container {
+            width: 1520px;
+            height: 100%;
+        }
+
         p {
             display: inline-block;
         }
@@ -25,41 +30,43 @@
             text-align: center;
         }
 
-        .main {
-            position: relative;
-            background-color: beige;
-        }
 
         .footer {
             background-color: rgb(185, 244, 244);
             text-align: center;
         }
 
+        .main {
+            position: relative;
+            width: 1520px;
+            background-color: beige;
+        }
+
         .leftArticle {
             background-color: rgb(207, 248, 248);
-            width: 200px;
+            width: 20%;
             text-align: justify;
             position: absolute;
-            left: 10px;
-            top: 10px;
+            left: 1%;
+            top: 1%;
         }
 
         .mainSection {
-            width: 1090px;
-            min-height: 400px;
+            width: 56%;
+            /* min-height: 75%; */
             text-align: justify;
             position: relative;
-            left: 215px;
-            top: 10px;
+            left: 22%;
+            /* top: 100%; */
         }
 
         .rightArticle {
             background-color: rgb(220, 221, 221);
-            width: 200px;
+            width: 20%;
             text-align: justify;
             position: absolute;
-            left: 1310px;
-            top: 10px;
+            left: 79%;
+            top: 1%;
         }
     </style>
 </head>
